crates/atm-core/tests/snapshots/normalize__a_stopped_turn_ends_interrupted_not_failed.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_wait",
        "name": "Bash",
        "summary": "$ sleep 41",
        "input": "{\"command\":\"sleep 41\"}",
        "status": {
          "state": "Running"
        },
        "output": null
      }
    }
  },
  {
    "Typing": null
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 1,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_wait",
        "name": "Bash",
        "summary": "$ sleep 41",
        "input": "{\"command\":\"sleep 41\"}",
        "status": {
          "state": "Cancelled"
        },
        "output": null
      }
    }
  },
  {
    "Upsert": {
      "idx": 11,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1020,
      "parent_tool_use_id": null,
      "body": {
        "type": "TurnEnd",
        "subtype": "error_during_execution",
        "is_error": true,
        "duration_ms": 4291,
        "num_turns": 4,
        "cost_usd_estimate": 0.2,
        "permission_denials": 0,
        "text": null,
        "limit": null,
        "stopped": "user_stop"
      }
    }
  },
  {
    "Typing": null
  }
]
