crates/atm-core/tests/snapshots/normalize__api_retry_is_one_entry_updated_in_place.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ApiRetry",
        "attempt": 1,
        "max_retries": 10,
        "delay_ms": 500,
        "error": "529 overloaded_error"
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 1,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ApiRetry",
        "attempt": 2,
        "max_retries": 10,
        "delay_ms": 1000,
        "error": "529 overloaded_error"
      }
    }
  }
]
