crates/atm-core/tests/snapshots/normalize__approval_after_tool_use_then_allowed.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_1",
        "name": "Bash",
        "summary": "$ npm test",
        "input": "{\"command\":\"npm test\",\"description\":\"Run tests\"}",
        "status": {
          "state": "Running"
        },
        "output": null
      }
    }
  },
  {
    "Typing": null
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 1,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_1",
        "name": "Bash",
        "summary": "$ npm test",
        "input": "{\"command\":\"npm test\",\"description\":\"Run tests\"}",
        "status": {
          "state": "AwaitingApproval",
          "approval_id": "approval-1",
          "can_remember": true,
          "reason": "Bash needs approval in this mode"
        },
        "output": null
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 2,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_1",
        "name": "Bash",
        "summary": "$ npm test",
        "input": "{\"command\":\"npm test\",\"description\":\"Run tests\"}",
        "status": {
          "state": "Running"
        },
        "output": null
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 3,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_1",
        "name": "Bash",
        "summary": "$ npm test",
        "input": "{\"command\":\"npm test\",\"description\":\"Run tests\"}",
        "status": {
          "state": "Succeeded"
        },
        "output": {
          "text": "3 passing",
          "truncated_bytes": 0,
          "is_error": false
        }
      }
    }
  }
]
