crates/atm-core/tests/snapshots/normalize__approval_cancelled.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_3",
        "name": "WebFetch",
        "summary": "https://example.com",
        "input": "{\"url\":\"https://example.com\"}",
        "status": {
          "state": "AwaitingApproval",
          "approval_id": "approval-3",
          "can_remember": false,
          "reason": "{\"type\":\"mode\"}"
        },
        "output": null
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 1,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "ToolCall",
        "tool_use_id": "toolu_3",
        "name": "WebFetch",
        "summary": "https://example.com",
        "input": "{\"url\":\"https://example.com\"}",
        "status": {
          "state": "Cancelled"
        },
        "output": null
      }
    }
  }
]
