crates/atm-core/tests/snapshots/normalize__compact_boundary_is_an_info_notice.snap
---
source: crates/atm-core/tests/normalize.rs
expression: "view(n.on_line(&line, 1000))"
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Notice",
        "level": "Info",
        "text": "Contesto compattato",
        "action": null
      }
    }
  }
]
