crates/atm-core/tests/snapshots/normalize__result_success_and_error.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "TurnEnd",
        "subtype": "success",
        "is_error": false,
        "duration_ms": 5123,
        "num_turns": 3,
        "cost_usd_estimate": 0.0421,
        "permission_denials": 0,
        "text": "Done.",
        "limit": null
      }
    }
  },
  {
    "Typing": null
  },
  {
    "Upsert": {
      "idx": 11,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 2000,
      "parent_tool_use_id": null,
      "body": {
        "type": "TurnEnd",
        "subtype": "success",
        "is_error": true,
        "duration_ms": 10,
        "num_turns": 1,
        "cost_usd_estimate": null,
        "permission_denials": 2,
        "text": "Claude AI usage limit reached|1760000000",
        "limit": "UsageLimit"
      }
    }
  },
  {
    "Typing": null
  },
  {
    "Upsert": {
      "idx": 12,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 3000,
      "parent_tool_use_id": null,
      "body": {
        "type": "TurnEnd",
        "subtype": "error_during_execution",
        "is_error": true,
        "duration_ms": null,
        "num_turns": null,
        "cost_usd_estimate": null,
        "permission_denials": 0,
        "text": "first problem\nsecond problem",
        "limit": null
      }
    }
  },
  {
    "Typing": null
  }
]
